--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <div>
         <img src="" alt="logo SensSky">
     </div>
+
+    <div>
+
+    </div>
+    <div>
+        
+    </div>
 </body>
 </html>
