--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora SensSky</title>
 </head>
 <body>
-    <div>
-        <img src="" alt="logo SensSky">
+    <div class="divLogo">
+        <img class="logo" src="public/Logo Preta SENSSKY.png" alt="logo SensSky">
     </div>
 
     <div>
 
     </div>
     <div>
-        
+
     </div>
 </body>
 </html>
