--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Calculadora SensSky</title>
 </head>
 <body>
-    <div class="divLogo">
-        <img class="logo" src="public/Logo Preta SENSSKY.png" alt="logo SensSky">
-    </div>
+    <header>
+        <div class="container">
+            <img src="public/logo.png" alt="">
+            <ul class="navbar">
+                <li>Home</li>
+                <li>Sobre nós</li>
+            </ul>
+        </div>
+    </header>
 
-    <div>
-
-    </div>
-    <div>
-
-    </div>
 </body>
 </html>
