--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora SensSky</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <img src="public/logo.png" alt="">
-            <ul class="navbar">
-                <li>Home</li>
-                <li>Sobre nós</li>
-            </ul>
-        </div>
+      <div class="container">
+        <img src="public/logo.png" alt="" />
+        <ul class="navbar">
+          <li>Home</li>
+          <li>Sobre nós</li>
+        </ul>
+      </div>
     </header>
-
-</body>
+    <div class="titulo">
+      <h1>Calculadora Financeira</h1>
+    </div>
+    <div class="calc">
+        <div class="conta">
+            <span></span><input type="text">
+            <span></span><input type="text">
+            <button>Calcular</button>
+        </div>
+    </div>
+    <div class="suport">
+        <ol class="passos">
+            <li><span>Insira</span></li>
+            <li><span>Insira</span></li>
+            <li><span>Insira</span></li>
+            <li><span>Insira</span></li>
+        </ol>
+    </div>
+  </body>
 </html>
