--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span>Valor Médio</span><input type="text" placeholder="Valor médio por manutenção" id="val" required>
             <button onclick="validar()">Calcular</button>
         </div>
-        <div class="mensagem"></div>
+        <div class="mensagem"><h1 id="mensagem"></h1></div>
         <div class="tabela" id="tabela">
         </div>
     </div>
